# gooscript

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  flake.nix  run_bytecode.sh  shell.nix  shell_script.sh
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  jekyll-gh-pages.yml
cmd /: CMakeLists.txt
command/: CMakeLists.txt  main.cpp
docs/: README.md  _sidebar.md  index.html
docs/syntax/: Functions.md  Keyword.md  Variables.md
examples/: animation_tree.goo  bytecode.goo  bytecode.goo.json  cmake.goo  cmdline.goo  cmdline.goo.json  cmdline.json  conditional.goo  fizzbuzz.goo  fizzbuzz.goo.json  intepreter.goo  ir.goo  json.goo  json2.goo  literals_perf_test.goo  main_menu.goo  math.goo  operations.goo  package.json  parser.goo  parser.goo.json  parser.js  parser.mjs  parser.token.goo  parser_token.mjs  player.lua  syntax.goo  test.goo  test_new_syntax.goo
examples/lsp/: test.goo
examples/xml/: parser.goo  test.xml
lsp/: CMakeLists.txt  Error.hpp  Marshal.hpp  Request.hpp  encoding.cpp  encoding.hpp  handle.cpp  handle.hpp  logging.hpp  main.cpp  rpc.cpp  rpc.hpp
lsp/requests/: Initialize.hpp
lsp/responses/: InitializeResult.hpp
src/: keyword.hpp  main.cpp  token.cpp  token.hpp
src/ast/: Expression.cpp  Expression.hpp  Statement.cpp  Statement.hpp  TokenTrace.hpp  VariableDeclare.cpp  VariableDeclare.hpp
src/ast/expression/: ArrayIndex.cpp  ArrayIndex.hpp  Binary.cpp  Binary.hpp  BuiltinLambda.cpp  BuiltinLambda.hpp  Function.cpp  Function.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionDefine.cpp  FunctionDefine.hpp  ICallable.hpp  IdentifierBinding.cpp  IdentifierBinding.hpp  PropertyAccess.cpp  PropertyAccess.hpp  Unary.cpp  Unary.hpp
src/ast/expression/compound/: If.cpp  If.hpp  Match.cpp  Match.hpp  ScopeBlock.cpp  ScopeBlock.hpp  While.cpp  While.hpp
src/ast/expression/literal/: Array.cpp  Array.hpp  Boolean.cpp  Boolean.hpp  Decimal.cpp  Decimal.hpp  Dictionary.cpp  Dictionary.hpp  FunctionDefine.cpp  FunctionDefine.hpp  Integer.cpp  Integer.hpp  Lambda.cpp  Lambda.hpp  Nil.cpp  Nil.hpp  String.cpp  String.hpp  StringLiteral.cpp  StringLiteral.hpp  Unit.cpp  Unit.hpp
src/ast/statements/: Eval.cpp  Eval.hpp  Return.cpp  Return.hpp  VariableDeclaration.cpp  VariableDeclaration.hpp
src/codegen/: Builder.cpp  Builder.hpp  Compiler.cpp  Compiler.hpp  Enviornment.cpp  Enviornment.hpp  Value.cpp  Value.hpp
src/codegen/err/: Error.hpp
src/json/: Array.cpp  Array.hpp  Boolean.cpp  Boolean.hpp  Number.cpp  Number.hpp  Object.cpp  Object.hpp  Text.cpp  Text.hpp  Value.cpp  Value.hpp  utils.cpp  utils.hpp
src/lexer/: Keyword.cpp  Keyword.hpp  Lexer.cpp  Lexer.hpp  Operator.cpp  Operator.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/meta/: Identifier.cpp  Identifier.hpp  Mutability.cpp  Mutability.hpp  VariableDefinition.cpp  VariableDefinition.hpp  VariantType.hpp
src/parser/: Error.cpp  Error.hpp  TokenStream.cpp  TokenStream.hpp
src/parser/pass/expression/: conditionals.cpp  conditionals.hpp  conditonals.cpp  expression.cpp  expression.hpp  functions.cpp  functions.hpp  literals.cpp  literals.hpp
src/parser/pass/statement/: block.cpp  block.hpp  statement.cpp  statement.hpp
src/runtime/: Enviornment.cpp  Enviornment.hpp  Environment.cpp  Environment.hpp  Error.cpp  Error.hpp  Intepreter.cpp  Intepreter.hpp  PrimitiveOperations.cpp  PrimitiveOperations.hpp
src/runtime/builtin/: StandardEnviornment.cpp  StandardEnviornment.hpp
src/runtime/data/: Array.cpp  Array.hpp  Boolean.cpp  Boolean.hpp  BuiltinFunction.cpp  BuiltinFunction.hpp  Callable.hpp  Closure.cpp  Closure.hpp  Decimal.cpp  Decimal.hpp  Dictionary.cpp  Dictionary.hpp  ExternFunction.cpp  ExternFunction.hpp  GString.cpp  GString.hpp  ICallable.hpp  INumeric.hpp  IValue.hpp  Integer.cpp  Integer.hpp  LValue.cpp  LValue.hpp  Nil.cpp  Nil.hpp  StringLiteral.cpp  StringLiteral.hpp  TypeConversion.hpp  Unit.cpp  Unit.hpp  Value.cpp  Value.hpp
src/runtime/data/interfaces/: ICallable.hpp  IIndexible.hpp  INumeric.hpp  IValue.hpp
src/runtime/err/: DuplicateName.cpp  DuplicateName.hpp  InvalidCast.cpp  InvalidCast.hpp  NotCallable.cpp  NotCallable.hpp  RuntimeError.cpp  RuntimeError.hpp  VariableNotFound.cpp  VariableNotFound.hpp
src/source/: IoError.cpp  IoError.hpp  SourceFile.cpp  SourceFile.hpp
src/token/: Array.cpp  Array.hpp  Decimal.cpp  Decimal.hpp  EndOfFile.cpp  EndOfFile.hpp  Identifier.cpp  Identifier.hpp  Integer.cpp  Integer.hpp  Keyword.cpp  Keyword.hpp  Operator.cpp  Operator.hpp  StringLiteral.cpp  StringLiteral.hpp  Token.cpp  Token.hpp
src/utils/: hash.cpp  hash.hpp  str.cpp  str.hpp
src/vm/: Chunk.cpp  Chunk.hpp  Instruction.hpp  Stack.cpp  Stack.hpp  Value.cpp  Value.hpp  Vm.cpp  Vm.hpp
src/vm/err/: CastError.hpp  Error.hpp
test/: CMakeLists.txt  ast.cpp  lexer.cpp
